fix dark mode for benchmark table

--- a/src/components/PerformanceComparisonTable/styles.module.css
+++ b/src/components/PerformanceComparisonTable/styles.module.css
@@ -16,9 +16,9 @@
 }
 
 .compactTable th {
-  background-color: #f2f2f2;
+  background-color: var(--reduct-background-gray);
 }
 
 .compactTable tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: var(--reduct-background-gray-light);
 }
